--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,6 +16,31 @@ jobs:
         with:
           template: test/simple/template
           output_file: test/simple/result
-          variables: foo=baz
+          variables: foo=bar
       - name: '[test] simple'
         run: diff test/simple/result test/simple/expected
+
+      - name: '[run] many variables'
+        uses: ./
+        with:
+          template: test/many-variables/template
+          output_file: test/many-variables/result
+          variables: |
+            foo=bar
+            baz=cux
+      - name: '[test] many variables'
+        run: diff test/many-variables/result test/many-variables/expected
+
+      - name: '[run] many variables (messy whitespace)'
+        uses: ./
+        with:
+          template: test/many-variables/template
+          output_file: test/many-variables/result
+          variables: |
+            foo=bar
+                baz=cux
+                
+                
+                    
+      - name: '[test] many variables (messy whitespace)'
+        run: diff test/many-variables/result test/many-variables/expected
