Support data_file
This commit adds support for a data_file argument
to the action. It also fixes a bug where the Subprocess
exit code wouldn't be used by the GitHub action.

--- a/action.yml
+++ b/action.yml
@@ -9,7 +9,9 @@ inputs:
     required: false
     default: false
   variables:
-    required: true
+    required: false
+  data_file:
+    required: false
 runs:
   using: 'docker'
   image: 'Dockerfile'
