--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,7 +12,9 @@ jobs:
         uses: actions/checkout@v1
 
       - name: 'Unit tests'
-        run: python unit-tests.py
+        run: |
+          docker build --tag tests .
+          docker run --entrypoint python tests unit-tests.py
 
       - name: '[run] simple'
         uses: ./
